# fireside

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENT-PLAN.md  LICENSE  README.md  deny.toml  skills-lock.json
.cargo/: config.toml
.claude/: settings.json
.claude/adrs/: adr-002-retire-node-layout.md  adr-004-presenter-first-rewrite.md  adr-005-quick-edit-modal-scope.md  adr-006-markdown-import.md  adr-007-spec-patch-0-1-1.md  adr-008-ratatui-image-msrv-spike.md  adr-009-incremental-reveal.md  adr-010-container-nesting-depth-limit.md  adr-011-ascii-art-crate-msrv-spike.md  adr-012-ascii-art-protocol-change.md  adr-013-image-crate-direct-dependency.md  adr-014-dual-screen-presenter-view-scope.md  adr-015-session-state-file-contract.md  adr-016-quick-edit-list-item-editing.md  adr-017-fireside-edit-scope.md  adr-018-authoring-transforms-module.md
.claude/commands/: audit-roadmap.md
.claude/plans/: 2026-07-12-sdd-retrofit-report.md  2026-07-12-strategic-improvement-plan.md  2026-07-17-research-and-improvement-plan.md  2026-07-18-ux-polish-plan.md  2026-07-19-fable-ux-audit.md  2026-07-19-wysiwyg-editor-plan.md  2026-07-23-ux-audit.md
.claude/skills/: adr
.githooks/: install.sh  pre-commit  pre-push
.github/: art-image.tape  art-text.tape  copilot-instructions.md  demo-import.md  demo-watch-toggle.sh  demo.tape  dependabot.yml  editing.tape  import.tape  quick-edit.tape  reveal.tape  timer-map.tape  validate-watch.tape
.github/agents/: context7.agent.md  documentation-writer.agent.md  raptor.agent.md  rust-expert.agent.md  se-tui-auditor.agent.md  se-ux-ui-designer.agent.md
.github/instructions/: markdown.instructions.md  rust-best-practices.instructions.md
.github/prompts/: claude-fable-plan.prompt.md  (+5 more)
.specify/: feature.json  init-options.json  integration.json
crates/fireside-cli/: Cargo.toml  README.md
crates/fireside-cli/assets/: demo.fireside.json
crates/fireside-cli/src/: art.rs  edit.rs  import.rs  main.rs  new.rs  report.rs  resume.rs  session.rs  templates.rs  watch.rs
crates/fireside-cli/src/commands/: fonts.rs  mod.rs  project.rs  scaffold.rs  session.rs  theme.rs  validate.rs
crates/fireside-cli/tests/: cli_e2e.rs
crates/fireside-core/: Cargo.toml  README.md
crates/fireside-core/proptest-regressions/model/: mod.txt
crates/fireside-core/src/: error.rs  lib.rs
crates/fireside-core/src/model/: branch.rs  content.rs  graph.rs  layout.rs  mod.rs  node.rs  transition.rs  traversal.rs
crates/fireside-core/tests/: content_roundtrip.rs
crates/fireside-engine/: Cargo.toml  README.md
crates/fireside-engine/proptest-regressions/: session.txt  validation.txt
crates/fireside-engine/src/: authoring.rs  commands.rs  error.rs  lib.rs  loader.rs  session.rs  traversal.rs  validation.rs
crates/fireside-engine/src/commands/: apply.rs  history.rs  mod.rs  types.rs
crates/fireside-engine/tests/: command_history.rs  fixtures.rs  traversal_tests.rs  validation_fixtures.rs
crates/fireside-engine/tests/fixtures/: invalid_dangling_ref.json  invalid_duplicate_id.json  invalid_empty.json  valid_branching.json  valid_linear.json
crates/fireside-tui/: Cargo.toml  README.md
crates/fireside-tui/src/: app.rs  error.rs  event.rs  follower.rs  lib.rs  theme.rs
crates/fireside-tui/src/app/: action_routing.rs  app_helpers.rs  app_tests.rs  editor_commands.rs  editor_input.rs  editor_navigation.rs  editor_picker.rs
crates/fireside-tui/src/app/app_tests/: block_editing.rs  editor_interaction.rs  mod.rs  overlays.rs  presenter.rs
crates/fireside-tui/src/config/: keybindings.rs  mod.rs  settings.rs
crates/fireside-tui/src/design/: fonts.rs  iterm2.rs  mod.rs  templates.rs  tokens.rs  vscode.rs
crates/fireside-tui/src/editor/: forms.rs  hit.rs  mod.rs
crates/fireside-tui/src/render/: blocks.rs  blocks_code.rs  blocks_divider.rs  blocks_extension.rs  blocks_heading.rs  blocks_image.rs  blocks_list.rs  blocks_text.rs  code.rs  content.rs  footer.rs  header.rs  hits.rs  layout.rs  map.rs  markdown.rs  mod.rs  notes.rs  overlays.rs  syntax.rs  tests.rs
crates/fireside-tui/src/render/editor/: canvas.rs  forms.rs  mod.rs  outline.rs  wiring.rs
crates/fireside-tui/src/render/snapshots/: fireside_tui__render__tests__default_view_frames_the_slide_in_a_rounded_card.snap  fireside_tui__render__tests__every_scene_renders_at_60x18-2.snap  fireside_tui__render__tests__every_scene_renders_at_60x18-3.snap  fireside_tui__render__tests__every_scene_renders_at_60x18-4.snap  fireside_tui__render__tests__every_scene_renders_at_60x18-5.snap  fireside_tui__render__tests__every_scene_renders_at_60x18-6.snap  fireside_tui__render__tests__every_scene_renders_at_60x18.snap  fireside_tui__render__tests__fullscreen_uses_the_full_width_not_the_measure.snap  fireside_tui__render__tests__hidden_column_reserves_no_width_until_revealed_at_80x24-2.snap  fireside_tui__render__tests__hidden_column_reserves_no_width_until_revealed_at_80x24.snap  fireside_tui__render__tests__the_ending_is_centered_not_left_aligned.snap
crates/fireside-tui/src/ui/: branch.rs  breadcrumb.rs  chrome.rs  editor.rs  editor_parts.rs  graph.rs  help.rs  mod.rs  presenter.rs  progress.rs  textarea.rs  timeline.rs  transitions.rs
crates/fireside-tui/tests/: harness.rs  harness_golden.rs  hello_smoke.rs
docs/: README.md  astro.config.mjs  package-lock.json  package.json
examples/: hello.json
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
memory-bank/: activeContext.md  competitive-analysis.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  tui-implementation-guidelines.md  ui-components.md  ux-flows.md
models/: main.tsp
plan/: README.md
protocol/: fixtures.expected.json  main.tsp  package-lock.json  package.json  run-fixtures.mjs  tsconfig.json  tspconfig.yaml  validate.mjs
scripts/: demos.sh  smoke.sh  verify.sh
src/: app.rs  cli.rs  error.rs  event.rs  lib.rs  loader.rs  main.rs  project.rs
typespec/: package.json  tspconfig.yaml
(+375 files in other folders)
