[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/fireside-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tiberius-s/fireside"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
fireside-core = { path = "crates/fireside-core" }
fireside-engine = { path = "crates/fireside-engine" }
fireside-tui = { path = "crates/fireside-tui" }

# Protocol / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Syntax highlighting
syntect = { version = "5.3", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "regex-fancy",
] }
two-face = { version = "0.5", default-features = false, features = [
  "syntect-fancy",
] }

# Text layout
unicode-width = "0.2"
textwrap = "0.16"

# System
plist = "1.8"
font-kit = "0.14"
image = "0.25"

# Dev moved to workspace.dev-dependencies

[workspace.dev-dependencies]
pretty_assertions = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2
