[package]
name = "fireside-cli"
description = "Fireside CLI — command-line entrypoint for Fireside presentations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fireside"
path = "src/main.rs"

[dependencies]
fireside-engine = { workspace = true }
fireside-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["std"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
