[package]
name = "fireside-cli"
description = "Fireside CLI — command-line entrypoint for Fireside presentations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fireside"
path = "src/main.rs"

[dependencies]
fireside-core = { workspace = true }
fireside-engine = { workspace = true }
fireside-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.13"
figlet-rs = "1"
rascii_art = "0.4"
image = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
