[package]
name = "fireside-engine"
description = "Fireside engine — validation, traversal, session management, and graph commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fireside-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
