[package]
name = "fireside-engine"
description = "Fireside engine — validation, traversal, session management, and graph commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fireside-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1"

[lints]
workspace = true
