[package]
name = "fireside-tui"
description = "Fireside TUI — the ratatui presenter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fireside-core = { workspace = true }
fireside-engine = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
